--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ importlib-metadata==6.7.0
 packaging==24.0
 Pillow==9.5.0
 psycopg2-binary==2.9.9
+python-dotenv==0.21.1
 pytz==2025.2
 sqlparse==0.4.4
 typing_extensions==4.7.1
